style.css
@import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap");
* {
  box-sizing: border-box;
}

html {
  min-height: 100%;
}

body {
  background: #181818;
  margin: 0;
  min-height: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: 21px;
  font-family: Inconsolata, monospace;
}

#sliderArea {
  display: grid;
  grid-template-rows: auto 1fr auto auto auto;
  justify-content: right;
}
#sliderArea .view-HueSlider {
  grid-column: 5/6;
  grid-row: 1/4;
}
#sliderArea .view-SatSlider {
  grid-column: 3/4;
  grid-row: 3/4;
}
#sliderArea .view-ValSlider {
  grid-column: 4/5;
  grid-row: 3/4;
}
#sliderArea .view-RedSlider {
  grid-column: 2/3;
  grid-row: 4/5;
}
#sliderArea .view-GreenSlider {
  grid-column: 3/4;
  grid-row: 4/5;
}
#sliderArea .view-BlueSlider {
  grid-column: 4/5;
  grid-row: 4/5;
}
#sliderArea .view-AlphaSlider {
  grid-column: 5/6;
  grid-row: 4/5;
}
#sliderArea #mainInput {
  grid-column: 2/6;
  grid-row: 5/6;
}
#sliderArea #mainColorDisplay {
  grid-column: 2/3;
  grid-row: 3/4;
}
#sliderArea #satValSlider {
  grid-column: 2/5;
  grid-row: 1/3;
}
#sliderArea #gradientViewController {
  grid-column: 1/2;
  grid-row: 1/2;
}

input {
  margin: 0;
  border: 1px solid #000;
  box-sizing: border-box;
  background: #181818;
  color: #aaa;
  font-size: 21px;
  font-family: Inconsolata, monospace;
  padding: 5px 0px 5px 8px;
  letter-spacing: 1px;
}

#gradientViewController, #satValSlider, #mainColorDisplay, #mainInput, .vbar {
  border-radius: 8px;
  border: 1px solid #000;
  background: #222;
  padding: 5px;
}

.vbar {
  width: 90px;
  display: flex;
  flex-direction: column;
}
.vbar .topperOuter,
.vbar .numberWrapper {
  border-radius: 4px;
  overflow: hidden;
  height: 42px;
  flex-grow: 0;
  flex-shrink: 0;
  border: 1px solid #000;
}
.vbar .sliderOuter {
  padding: 12px 0;
  position: relative;
}
.vbar .sliderOuter .sliderInner {
  box-sizing: content-box;
  height: 256px;
  background: linear-gradient(#ff0000, #000000);
  border: 1px solid #000;
  top: 11px;
  left: 3px;
  right: 3px;
  border-radius: 3px;
}
.vbar .sliderOuter .sliderMarker {
  box-sizing: content-box;
  position: absolute;
  left: 0px;
  right: 0px;
  margin-top: 5px;
  top: 180px;
  height: 1px;
  border: 7px solid #ccc;
  background: transparent;
  border-top-color: transparent;
  border-bottom-color: transparent;
}
.vbar .topperOuter {
  background-image: url(checkers.png);
}
.vbar .topperOuter .topper {
  background-color: #4b0000;
  width: 100%;
  height: 100%;
}
.vbar .numberWrapper {
  display: flex;
}
.vbar .numberWrapper .numberBox {
  border: 0px none;
  width: 0px;
  flex-shrink: 1;
  flex-grow: 1;
  padding-right: 0;
}
.vbar .numberWrapper .arrowWrapper {
  display: flex;
  flex-direction: column;
}
.vbar .numberWrapper .arrow {
  padding: 10px 3px 0;
  line-height: 0;
  flex-grow: 1;
  flex-shrink: 1;
  background: #333;
  color: #aaa;
  font-size: 14px;
  text-align: center;
  cursor: pointer;
}
.vbar .numberWrapper .arrow:hover {
  background: #555;
}
.vbar .numberWrapper .arrow:active {
  background: #181818;
}
.vbar .numberWrapper .arrowUp {
  border-bottom: 1px solid #000;
}

.controlGroup {
  display: flex;
  flex-direction: row;
  border-radius: 4px;
  overflow: hidden;
  border: 1px solid #000;
}
.controlGroup:not(:last-child) {
  margin-bottom: 5px;
}
.controlGroup input {
  border: 0px none;
  flex-grow: 1;
}
.controlGroup .button {
  position: relative;
  padding: 5px 8px 6px;
  background: #333;
  color: #aaa;
  font-size: 20px;
  text-align: center;
  cursor: pointer;
  min-width: 34px;
}
.controlGroup .button:not(:first-child) {
  border-left: 1px solid #000;
}
.controlGroup .button:hover {
  background: #555;
}
.controlGroup .button:active {
  background: #181818;
}
.controlGroup .button.active {
  background: #999;
  color: #000;
}
.controlGroup .button .desc {
  padding-left: 1ch;
  font-size: 85%;
  display: inline-block;
  height: 18px;
}
.controlGroup .button .buttonSuccessToast {
  padding: inherit;
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: #555;
  color: inherit;
  opacity: 1;
  pointer-events: none;
  transition: opacity 0.5s;
  text-align: center;
}
.controlGroup .button .buttonSuccessToast.fade {
  opacity: 0;
}

.controlGroup.vertical {
  flex-direction: column;
}
.controlGroup.vertical .button {
  border-left: 0px none;
  text-align: left;
}
.controlGroup.vertical .button:not(:first-child) {
  border-top: 1px solid #000;
}

#mainInput {
  width: auto;
}

#mainColorDisplay {
  display: flex;
}
#mainColorDisplay .inner {
  display: flex;
  flex-direction: column;
  border-radius: 4px;
  overflow: hidden;
  border: 1px solid #000;
  background: url(checkers.png);
  flex-grow: 1;
}
#mainColorDisplay .inner .solid, #mainColorDisplay .inner .alpha {
  flex-grow: 1;
}

#satValSlider {
  display: flex;
  padding: 16px;
}
#satValSlider .sliderOuter {
  width: 100%;
  height: 100%;
  border: 1px solid #000;
  position: relative;
}
#satValSlider .sliderOuter .sliderInner {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-image: linear-gradient(#0000, #000), linear-gradient(to right, #fff, #fff0);
  background-color: #f00;
}
#satValSlider .sliderOuter .sliderMarker {
  position: absolute;
  width: 2px;
  height: 2px;
  left: 50px;
  top: 50px;
  margin-top: -1px;
  margin-left: -1px;
  border-color: #fff;
}
#satValSlider .sliderOuter .sliderMarker:before {
  content: "";
  position: absolute;
  top: 0;
  left: -8px;
  width: 6px;
  height: 2px;
  border-left: 6px solid #fff;
  border-right: 6px solid #fff;
  border-color: inherit;
}
#satValSlider .sliderOuter .sliderMarker:after {
  content: "";
  position: absolute;
  top: -8px;
  left: 0;
  width: 2px;
  height: 6px;
  border-top: 6px solid #fff;
  border-bottom: 6px solid #fff;
  border-color: inherit;
}

#gradientViewController {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}
#gradientViewController .modes {
  margin-right: 5px;
  margin-bottom: 0;
}
#gradientViewController .modes .button {
  text-align: center;
}

#gradientController {
  position: absolute;
  left: 50px;
  top: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 15px 0;
  background: #181818;
}
#gradientController .gradientSwatch {
  height: 150px;
  width: 150px;
  border-radius: 8px;
  flex-shrink: 1;
  position: relative;
  background-image: url(checkers.png);
}
#gradientController .gradientSwatch .addBefore,
#gradientController .gradientSwatch .addAfter,
#gradientController .gradientSwatch .duplicate,
#gradientController .gradientSwatch .delete {
  position: absolute;
  left: 25%;
  right: 25%;
  height: 40px;
  text-align: center;
  cursor: pointer;
  z-index: 3;
  padding: 8px;
  font-size: 23px;
  color: #fff0;
  transition: color 0.2s;
}
#gradientController .gradientSwatch .addBefore:hover,
#gradientController .gradientSwatch .addAfter:hover,
#gradientController .gradientSwatch .duplicate:hover,
#gradientController .gradientSwatch .delete:hover {
  color: #ffff;
}
#gradientController .gradientSwatch .addBefore:before,
#gradientController .gradientSwatch .addAfter:before,
#gradientController .gradientSwatch .duplicate:before,
#gradientController .gradientSwatch .delete:before {
  content: "";
  z-index: -1;
  position: absolute;
  top: 20px;
  bottom: 20px;
  left: 0;
  right: 0;
  background: #181818;
  transition: top ease-in 0.15s, bottom ease-in 0.15s;
  border-radius: 5px;
}
#gradientController .gradientSwatch .addBefore:hover:before,
#gradientController .gradientSwatch .addAfter:hover:before,
#gradientController .gradientSwatch .duplicate:hover:before,
#gradientController .gradientSwatch .delete:hover:before {
  top: 0px;
  bottom: 0px;
  transition: top ease-out 0.15s, bottom ease-out 0.15s;
}
#gradientController .gradientSwatch:hover .addBefore, #gradientController .gradientSwatch:hover .addAfter, #gradientController .gradientSwatch:hover .duplicate, #gradientController .gradientSwatch:hover .delete {
  color: #fff3;
}
#gradientController .gradientSwatch .addBefore {
  top: -20px;
}
#gradientController .gradientSwatch .addAfter {
  bottom: -20px;
}
#gradientController .gradientSwatch:not(:last-child) .addAfter {
  display: none;
}
#gradientController .gradientSwatch .duplicate {
  left: -20px;
  width: 40px;
  top: 50%;
  bottom: auto;
  margin-top: -20px;
}
#gradientController .gradientSwatch:only-child .delete {
  display: none;
}
#gradientController .gradientSwatch .delete {
  right: -20px;
  left: auto;
  width: 40px;
  top: 50%;
  bottom: auto;
  margin-top: -20px;
}
#gradientController .gradientSwatch:not(.active) .isActive {
  display: none;
}
#gradientController .gradientSwatch .isActive {
  position: absolute;
  left: 8px;
  top: 8px;
  font-size: 20px;
}

#gradientController .gradientSwatch:hover + .gradientSwatch .addBefore {
  color: #fff3;
}

#randomCanvas {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  background: url(checkers.png);
}

/*# sourceMappingURL=style.css.map */

